--- a/lib/kamansky_web/live/order_live/index.html.heex
+++ b/lib/kamansky_web/live/order_live/index.html.heex
@@ -1,41 +1,33 @@
 <div>
-  <KamanskyWeb.Components.Page.page_header
-    buttons={
-      [
-        %{
-          color: :gray,
-          display: @live_action == :pending,
-          options: %{
-            "phx-click": "load_new_orders"
-          },
-          title: "Load New Orders"
-        },
-        %{
-          color: :secondary,
-          display: @live_action == :processed,
-          options: %{
-            confirmation: %{
-              action: "mark_all_processed_shipped",
-              content: "Are you sure you want to mark all processed orders as shipped?",
-              external: true,
-              values: []
-            }
-          },
-          title: "Mark All as Shipped",
-          with_confirmation: true
-        },
-        %{
-          display: @live_action == :pending,
-          options: %{
-            "phx-click": "open",
-            "phx-target": "#new-order-form-modal"
-          },
-          title: "Create Order"
-        }
-      ]
-    }
-    page_title={@page_title}
-  />
+  <KamanskyWeb.Components.Page.page_header page_title={@page_title}>
+    <:buttons>
+      <KamanskyWeb.Components.Page.header_button
+        color="gray"
+        display={@live_action == :pending}
+        phx-click="load_new_orders"
+      >
+        Load New Orders
+      </KamanskyWeb.Components.Page.header_button>
+      <KamanskyWeb.Components.Page.header_button_with_confirmation
+        color="secondary"
+        display={@live_action == :processed}
+        confirmation_action="mark_all_processed_shipped"
+        confirmation_content="Are you sure you want to mark all processed orders as shipped?"
+        confirmation_external="true"
+        confirmation_title="Mark All as Shipped"
+        confirmation_values={[]}
+      >
+        Mark All as Shipped
+      </KamanskyWeb.Components.Page.header_button_with_confirmation>
+      <KamanskyWeb.Components.Page.header_button
+        display={@live_action == :pending}
+        phx-click="open"
+        phx-target="#new-order-form-modal"
+      >
+        Create Order
+      </KamanskyWeb.Components.Page.header_button>
+    </:buttons>
+  </KamanskyWeb.Components.Page.page_header>
   <KamanskyWeb.Components.DataTable.table
     rows={@data}
     pagination={@pagination}
