--- a/lib/kamansky_web/live/stamp_live/listing_form_component.html.heex
+++ b/lib/kamansky_web/live/stamp_live/listing_form_component.html.heex
@@ -57,5 +57,59 @@
         </div>
       </div>
     </div>
+    <%= if Ecto.Changeset.get_field(@changeset, :ebay) == true do %>
+      <h6 class="font-bold mb-2">eBay</h6>
+      <div class="form-group">
+        <%= label f, :ebay_title, "Title" %>
+        <div class="form-input">
+          <%= text_input f, 
+            :ebay_title,
+            maxlength: 80,
+            value: @ebay_title,
+            "x-init": "count = $el.value.length",
+            "x-on:change": "count = $el.value.length"
+          %>
+        </div>
+        <div class="mt-2 text-xs" x-text="count + '/80 characters'" />
+      </div>
+      <div class="form-group">
+        <%= label f, :ebay_description, "Description" %>
+        <div class="form-input">
+          <%= textarea f,
+            :ebay_description,
+            rows: 4,
+            class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md",
+            value: @ebay_description
+          %>
+        </div>
+      </div>
+    <% end %>
+    <%= if Ecto.Changeset.get_field(@changeset, :hipstamp) == true do %>
+      <h6 class="font-bold mb-2">Hipstamp</h6>
+      <div class="form-group">
+        <%= label f, :hipstamp_title, "Title" %>
+        <div class="form-input">
+          <%= text_input f, 
+            :hipstamp_title,
+            maxlength: 80,
+            value: @hipstamp_title,
+            "x-init": "count = $el.value.length",
+            "x-on:change": "count = $el.value.length"
+          %>
+        </div>
+        <div class="mt-2 text-xs" x-text="count + '/80 characters'" />
+      </div>
+      <div class="form-group">
+        <%= label f, :hipstamp_description, "Description" %>
+        <div class="form-input">
+          <%= textarea f,
+            :hipstamp_description,
+            rows: 4,
+            class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md",
+            value: @hipstamp_description
+          %>
+        </div>
+      </div>
+    <% end %>
   </.form>
 </div>
