--- a/lib/kamansky_web/live/stamp_live/listing_form_component.html.heex
+++ b/lib/kamansky_web/live/stamp_live/listing_form_component.html.heex
@@ -65,7 +65,6 @@
           <%= text_input f, 
             :ebay_title,
             maxlength: 80,
-            value: @ebay_title,
             "x-init": "count = $el.value.length",
             "x-on:change": "count = $el.value.length"
           %>
@@ -78,8 +77,7 @@
           <%= textarea f,
             :ebay_description,
             rows: 4,
-            class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md",
-            value: @ebay_description
+            class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md"
           %>
         </div>
       </div>
@@ -92,7 +90,6 @@
           <%= text_input f, 
             :hipstamp_title,
             maxlength: 80,
-            value: @hipstamp_title,
             "x-init": "count = $el.value.length",
             "x-on:change": "count = $el.value.length"
           %>
@@ -105,8 +102,7 @@
           <%= textarea f,
             :hipstamp_description,
             rows: 4,
-            class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md",
-            value: @hipstamp_description
+            class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md"
           %>
         </div>
       </div>
