--- a/lib/kamansky_web/live/listing_live/list_on_ebay_form_component.html.heex
+++ b/lib/kamansky_web/live/listing_live/list_on_ebay_form_component.html.heex
@@ -8,7 +8,7 @@
     phx_submit="submit"
   >
     <div class="form-group required" x-data="{count: 0}">
-      <%= label f, :ebay_title %>
+      <%= label f, :ebay_title, "Title" %>
       <div class="form-input">
         <%= text_input f, 
           :ebay_title, 
