--- a/lib/kamansky_web/live/trend_live/sold.html.heex
+++ b/lib/kamansky_web/live/trend_live/sold.html.heex
@@ -1,5 +1,11 @@
-<div>
-  <KamanskyWeb.Components.Page.page_header page_title={@page_title} />
+<.live_component 
+  module={KamanskyWeb.Components.Header} 
+  id="kamansky-header"
+  current_user={@current_user}
+  live_action={@live_action}
+  page_title={@page_title}
+/>
+<main>
   <KamanskyWeb.Components.DataTable.table
     rows={@data}
     pagination={@pagination}
@@ -24,4 +30,4 @@
     </:col>
   </KamanskyWeb.Components.DataTable.table>
   <KamanskyWeb.TrendLive.Components.footer socket={@socket} />
-</div>
+</main>
