--- a/lib/kamansky_web/live/components/header.html.heex
+++ b/lib/kamansky_web/live/components/header.html.heex
@@ -1,20 +1,19 @@
-<header class="bg-white">
+<header class="bg-white shadow">
   <nav class="bg-gray-800" x-data="{menuOpen: false}">
     <div class="max-w-7xl mx-auto pr-2 sm:pr-6 lg:pr-8">
       <div class="relative flex items-center justify-between h-16">
         <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-          <!-- Mobile menu button-->
           <button
             type="button" 
             class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" 
             aria-controls="mobile-menu" 
-            aria-expanded="false"
+            x-bind:aria-expanded="open.toString()"
             x-on:click="menuOpen = !menuOpen"
           >
             <span class="sr-only">Open main menu</span>
             <svg 
-              class="h-6 w-6" 
-              :class="menuOpen ? 'hidden' : 'block'"
+              class="h-6 w-6 block" 
+              :class="{'hidden': menuOpen, 'block': !(menuOpen)}"
               xmlns="http://www.w3.org/2000/svg" 
               fill="none" 
               viewBox="0 0 24 24" 
@@ -24,8 +23,8 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
             </svg>
             <svg 
-              class="h-6 w-6" 
-              :class="menuOpen ? 'block' : 'hidden'"
+              class="h-6 w-6 hidden" 
+              :class="{'block': menuOpen, 'hidden': !(menuOpen)}"
               xmlns="http://www.w3.org/2000/svg" 
               fill="none" 
               viewBox="0 0 24 24" 
@@ -208,18 +207,8 @@
           <% end %>
         </div>
       </div>
-      <div class="sm:hidden" id="mobile-menu" x-show="menuOpen">
+      <div class="sm:hidden" id="mobile-menu" x-cloak x-show="menuOpen">
         <div class="px-2 pt-2 pb-3 space-y-1">
-          <%= live_redirect "Dashboard",
-            to: Routes.dashboard_index_path(@socket, :index),
-            class: "block font-medium px-3 py-2 rounded-md text-base" <> (
-              if @socket.view == KamanskyWeb.DashboardLive.Index do
-                " bg-gray-900 text-white"
-              else
-                " text-gray-300 hover:bg-gray-700 hover:text-white"
-              end
-            )
-          %>
           <KamanskyWeb.Components.Page.navbar_link
             platform="mobile"
             title="Collection" 
@@ -248,4 +237,49 @@
       </div>
     </div>
   </nav>
+  <%= unless assigns[:title] == "false" do %>
+    <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+      <%= if Map.has_key?(assigns, :breadcrumbs) do %>
+        <div>
+          <nav class="hidden sm:flex" aria-label="Breadcrumb">
+            <ol role="list" class="flex items-center space-x-4">
+              <li>
+                <div class="flex">
+                  <%= live_redirect elem(hd(@breadcrumbs), 0),
+                    to: elem(hd(@breadcrumbs), 1),
+                    class: "font-medium text-gray-500 text-sm hover:text-gray-700"
+                  %>
+                </div>
+              </li>
+              <%= for breadcrumb <- tl(@breadcrumbs) do %>
+                <li>
+                  <div class="flex items-center">
+                    <KamanskyWeb.Components.Icons.chevron_right />
+                    <%= if is_tuple(breadcrumb) do %>
+                      <%= live_redirect elem(breadcrumb, 0),
+                        to: elem(breadcrumb, 1),
+                        class: "font-medium ml-4 text-gray-500 text-sm hover:text-gray-700"
+                      %>
+                    <% else %>
+                      <span class="font-medium ml-4 text-gray-500 text-sm"><%= breadcrumb %></span>
+                    <% end %>
+                  </div>
+                </li>
+              <% end %>
+            </ol>
+          </nav>
+        </div>
+      <% end %>
+      <div class="md:flex md:items-center md:justify-between">
+        <h1 class="text-3xl font-bold text-gray-900">
+          <%= @page_title %>
+        </h1>
+        <%= if Map.has_key?(assigns, :buttons) do %>
+          <div class="flex gap-x-3 mt-5 lg:mt-0 lg:ml-4">
+            <%= render_slot(@buttons) %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
 </header>
