--- a/lib/kamansky_web/live/order_live/show.html.heex
+++ b/lib/kamansky_web/live/order_live/show.html.heex
@@ -1,129 +1,147 @@
-<div>
-  <KamanskyWeb.Components.Page.page_header
-    breadcrumbs={
-      [
-        {"#{String.capitalize(Atom.to_string(@order.status))} Orders", Routes.order_index_path(@socket, @order.status, go_to_record: @order.id)},
-        @page_title
-      ]
-    },
-    page_title={@page_title}
-  />
-  <table>
-    <thead class="border-b-2 border-black">
-      <tr class="text-left">
-        <th colspan="2" class="pb-2 pl-4">Stamp</th>
-        <th>Price</th>
-      </tr>
-    </thead>
-    <tbody class="border-b-2 border-black">
-      <%= for listing <- @order.listings do %>
-        <tr class="align-top border-b">
-          <td class="pl-4 py-2">
-            <%= if listing.stamp.front_photo do %>
-              <img
-                src={Attachment.path(listing.stamp.front_photo)}
-                class="h-24 max-w-max mr-6"
-              />
-            <% else %>
-              <img
-                src={Routes.static_path(@socket, "/images/blank-stamp.png")}
-                class="h-24 max-w-max mr-6"
-              />
-            <% end %>
-          </td>
-          <td class="py-2 w-[92%]">
-            <%= StampReference.description(listing.stamp.stamp_reference) %><br />
-            <small>Item #<%= listing.stamp.inventory_key %></small>
-          </td>
-          <td class="py-2 w-[8%]"><%= format_decimal_as_currency(listing.sale_price) %></td>
-        </tr>
-      <% end %>
-    </tbody>
-    <tfoot>
-      <tr class="border-b">
-        <td colspan="2" class="pr-8 py-2 text-right">Subtotal</td>
-        <td><%= format_decimal_as_currency(@order.item_price) %></td>
-      </tr>
-      <tr class="border-b border-black">
-        <td colspan="2" class="pr-8 py-2 text-right">Shipping</td>
-        <td class="border-b border-black"><%= format_decimal_as_currency(@order.shipping_price) %></td>
-      </tr>
-      <tr class="border-b">
-        <td colspan="2" class="pr-8 py-2 text-right">Total</td>
-        <td><%= format_decimal_as_currency(Order.total_paid(@order)) %></td>
-      </tr>
-      <tr class="border-b">
-        <td colspan="2" class="pr-8 py-2 text-right">Total Items</td>
-        <td><%= Order.total_items(@order) %></td>
-      </tr>
-    </tfoot>
-  </table>
-  <section class="mt-3">
-    <div class="grid grid-cols-2">
-      <div>
-        <div>
-          Ordered by:<br />
-          <%= @order.customer.name %><br />
-          <%= @order.customer.street_address %><br />
-          <%= @order.customer.city %>, <%= @order.customer.state %> <%= @order.customer.zip %><br />
-          <%= if @order.customer.country, do: raw("#{@order.customer.country}<br />") %>
-          <%= @order.customer.email %>
-        </div>
-        <div class="mt-6">
-          Ordered through:<br />
-          <%= Order.platform(@order) %> (order ID: <%= Order.platform_id(@order) %>)
-        </div>
+<.live_component 
+  module={KamanskyWeb.Components.Header} 
+  id="kamansky-header"
+  current_user={@current_user}
+  live_action={@live_action}
+  title="false"
+/>
+<main class="bg-gray-50">
+  <div class="max-w-2xl mx-auto pt-8 pb-6 sm:px-6 lg:max-w-7xl lg:px-8">
+    <div class="px-4 space-y-2 sm:px-0 sm:flex sm:items-baseline sm:justify-between sm:space-y-0">
+      <div class="flex sm:items-baseline sm:space-x-4">
+        <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl"><%= @page_title %></h1>
+        <a href="#" class="hidden text-sm font-medium text-indigo-600 hover:text-indigo-500 sm:block">View invoice<span aria-hidden="true"> &rarr;</span></a>
       </div>
-      <div>
-        <table class="w-full">
-          <thead>
-            <tr class="border-b-2 border-black">
-              <th colspan="2" class="pl-2 py-2 text-left">Metrics</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="border-b">
-              <td class="pl-2 py-2">Price paid</td>
-              <td><%= format_decimal_as_currency(Order.total_paid(@order)) %></td>
-            </tr>
-            <tr class="border-b">
-              <td class="pl-2 py-2">Stamp cost</td>
-              <td><%= format_decimal_as_currency(Order.total_stamp_cost(@order)) %></td>
-            </tr>
-            <tr class="border-b">
-              <td class="pl-2 py-2">Selling fees</td>
-              <td><%= format_decimal_as_currency(@order.selling_fees) %></td>
-            </tr>
-            <tr>
-              <td class="pl-2 py-2">Shipping cost</td>
-              <td><%= format_decimal_as_currency(@order.shipping_cost) %></td>
-            </tr>
-          </tbody>
-          <tfoot class="border-t-2 border-black">
-            <tr class="border-b font-bold">
-              <td class="pl-2 py-2">Net profit/loss</td>
-              <td class={if Decimal.gt?(Order.net_profit(@order), Decimal.new(0)), do: "text-green-600", else: "text-red-600"}>
-                <%= format_decimal_as_currency(Order.net_profit(@order)) %>
-              </td>
-            </tr>
-          </tfoot>
-        </table>
-      </div>
+      <p class="text-sm text-gray-600">
+        Order placed <time datetime={@order.ordered_at} class="font-medium text-gray-900"><%= formatted_date(@order.ordered_at) %></time>
+      </p>
+      <a href="#" class="text-sm font-medium text-indigo-600 hover:text-indigo-500 sm:hidden">View invoice<span aria-hidden="true"> &rarr;</span></a>
     </div>
-  </section>
-  <div class="mt-4">
-    <h4 class="sr-only">Status</h4>
-    <p class="text-sm font-medium text-gray-900">Status</p>
-    <div class="mt-6" aria-hidden="true">
-      <div class="bg-gray-200 rounded-full overflow-hidden">
-        <div class={"h-2 bg-indigo-600 rounded-full " <> order_status_width(@order)} />
+    <section aria-labelledby="stamps-heading" class="mt-6">
+      <h2 id="stamps-heading" class="sr-only">Stamps purchased</h2>
+      <div class="space-y-8">
+        <%= for listing <- @order.listings do %>
+          <div class="bg-white border-t border-b border-gray-200 shadow-sm sm:border sm:rounded-lg">
+            <div class="py-6 px-4 sm:px-6 lg:grid lg:grid-cols-12 lg:gap-x-8 lg:p-8">
+              <div class="sm:flex lg:col-span-7">
+                <div class="flex-shrink-0 w-full aspect-w-1 aspect-h-1 rounded-lg overflow-hidden sm:aspect-none sm:w-24 sm:h-24">
+                  <img 
+                    src={if listing.stamp.front_photo, do: Attachment.path(listing.stamp.front_photo), else: Routes.static_path(@socket, "/images/blank-stamp.png")} 
+                    class="w-full h-full object-center sm:w-full sm:h-full" 
+                  />
+                </div>
+
+                <div class="mt-6 sm:mt-0 sm:ml-6">
+                  <h3 class="text-base font-medium text-gray-900">
+                    <%= StampReference.description(listing.stamp.stamp_reference) %>
+                  </h3>
+                  <p class="mt-2 text-sm font-medium text-gray-900">
+                    <%= format_decimal_as_currency(listing.sale_price) %>
+                  </p>
+                  <p class="mt-3 text-sm text-gray-500">
+                    Item #<%= listing.stamp.inventory_key %>
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="border-t border-gray-200 py-6 px-4 sm:px-6 lg:p-8">
+              <h4 class="sr-only">Status</h4>
+              <p class="text-sm font-medium text-gray-900">
+                <% IO.inspect order_status_width(@order) %>
+                <%= order_status_text(@order) %> on <time datetime={order_status_time(@order)}><%= formatted_date(order_status_time(@order)) %></time>
+              </p>
+              <div class="mt-6" aria-hidden="true">
+                <div class="bg-gray-200 rounded-full overflow-hidden">
+                  <div class={"h-2 bg-indigo-600 rounded-full " <> order_status_width(@order)}></div>
+                </div>
+                <div class="hidden sm:grid grid-cols-4 text-sm font-medium text-gray-600 mt-6">
+                  <div>Order placed<br /><%= formatted_date(@order.ordered_at) %></div>
+                  <div class="text-center">Processed<br /><%= formatted_date(@order.processed_at) %></div>
+                  <div class="text-center">Shipped<br /><%= formatted_date(@order.shipped_at) %></div>
+                  <div class="text-right">Completed<br /><%= formatted_date(@order.completed_at) %></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
       </div>
-      <div class="hidden sm:grid grid-cols-4 text-sm font-medium text-gray-600 mt-6">
-        <div>Ordered<br /><%= formatted_date(@order.ordered_at) %></div>
-        <div class="text-center">Processed<br /><%= formatted_date(@order.processed_at) %></div>
-        <div class="text-center">Shipped<br /><%= formatted_date(@order.shipped_at) %></div>
-        <div class="text-right">Completed<br /><%= formatted_date(@order.completed_at) %></div>
+    </section>
+    <section aria-labelledby="summary-heading" class="mt-16">
+      <h2 id="summary-heading" class="sr-only">Billing Summary</h2>
+      <div class="bg-gray-100 py-6 px-4 sm:px-6 sm:rounded-lg lg:px-8 lg:py-8 lg:grid lg:grid-cols-12 lg:gap-x-8">
+        <dl class="grid grid-cols-2 gap-6 text-sm sm:grid-cols-2 md:gap-x-8 lg:col-span-7">
+          <div>
+            <dt class="font-medium text-gray-900">Ship to</dt>
+            <dd class="mt-3 text-gray-500">
+              <span class="block"><%= @order.customer.name %></span>
+              <span class="block"><%= @order.customer.street_address %></span>
+              <span class="block"><%= @order.customer.city %>, <%= @order.customer.state %> <%= @order.customer.zip %></span>
+              <span class="block"><%= if @order.customer.country, do: "#{@order.customer.country}" %></span>
+            </dd>
+          </div>
+          <div>
+            <dt class="font-medium text-gray-900">Ordered through</dt>
+            <div class="mt-3">
+              <dd class="-ml-4 -mt-4 flex flex-wrap">
+                <div class="ml-4 mt-4">
+                  <p class="text-gray-900">
+                    <%= Order.platform(@order) %>
+                  </p>
+                  <p class="text-gray-600">
+                    Order ID: <%= Order.platform_id(@order) %>
+                  </p>
+                </div>
+              </dd>
+            </div>
+          </div>
+        </dl>
+
+        <dl class="mt-8 divide-y divide-gray-200 text-sm lg:mt-0 lg:col-span-5">
+          <div class="pb-4 flex items-center justify-between">
+            <dt class="text-gray-600">Subtotal</dt>
+            <dd class="font-medium text-gray-900"><%= format_decimal_as_currency(@order.item_price) %></dd>
+          </div>
+          <div class="py-4 flex items-center justify-between">
+            <dt class="text-gray-600">Shipping</dt>
+            <dd class="font-medium text-gray-900"><%= format_decimal_as_currency(@order.shipping_price) %></dd>
+          </div>
+          <div class="pt-4 flex items-center justify-between">
+            <dt class="font-medium text-gray-900">Order total</dt>
+            <dd class="font-medium text-indigo-600"><%= format_decimal_as_currency(Order.total_paid(@order)) %></dd>
+          </div>
+        </dl>
       </div>
-    </div>
+    </section>
+    <section aria-labelledby="metrics-heading" class="mt-16">
+      <h2 id="metrics-heading" class="sr-only">Metrics</h2>
+      <div class="bg-gray-100 py-6 px-4 sm:px-6 sm:rounded-lg lg:px-8 lg:py-8 lg:grid lg:grid-cols-12 lg:gap-x-8">
+        <h6 class="lg:col-span-12 font-medium mb-8">Metrics</h6>
+        <dl class="mt-8 divide-y divide-gray-200 text-sm lg:mt-0 lg:col-span-5">
+          <div class="pb-4 flex items-center justify-between">
+            <dt class="text-gray-600">Price paid</dt>
+            <dd class="font-medium text-gray-900"><%= format_decimal_as_currency(Order.total_paid(@order)) %></dd>
+          </div>
+          <div class="py-4 flex items-center justify-between">
+            <dt class="text-gray-600">Stamp cost</dt>
+            <dd class="font-medium text-gray-900"><%= format_decimal_as_currency(Order.total_stamp_cost(@order)) %></dd>
+          </div>
+          <div class="py-4 flex items-center justify-between">
+            <dt class="text-gray-600">Selling fees</dt>
+            <dd class="font-medium text-gray-900"><%= format_decimal_as_currency(@order.selling_fees) %></dd>
+          </div>
+          <div class="py-4 flex items-center justify-between">
+            <dt class="text-gray-600">Shipping cost</dt>
+            <dd class="font-medium text-gray-900"><%= format_decimal_as_currency(@order.shipping_cost) %></dd>
+          </div>
+          <div class="pt-4 flex items-center justify-between">
+            <dt class="font-medium text-gray-900">Net profit/loss</dt>
+            <dd class="font-medium">
+              <span class={color_for_currency(Order.net_profit(@order))}><%= format_decimal_as_currency(Order.net_profit(@order)) %></span>
+            </dd>
+          </div>
+        </dl>
+      </div>
+    </section>
   </div>
-</div>
+</main>
