--- a/lib/kamansky_web/live/stamp_reference_live/index.html.heex
+++ b/lib/kamansky_web/live/stamp_reference_live/index.html.heex
@@ -1,17 +1,23 @@
-<div>
-  <KamanskyWeb.Components.Page.page_header page_title={@page_title}>
-    <:buttons>
-      <KamanskyWeb.Components.Page.header_button
-        display={@live_action != :missing_from_collection}
-        phx-click="open"
-        phx-target="#stamp_reference-form-modal"
-        phx-value-action="new"
-        phx-value-stamp-reference-id=""
-      >
-        Add New Stamp Reference
-      </KamanskyWeb.Components.Page.header_button>
-    </:buttons>
-  </KamanskyWeb.Components.Page.page_header>
+<.live_component 
+  module={KamanskyWeb.Components.Header} 
+  id="kamansky-header"
+  current_user={@current_user}
+  live_action={@live_action}
+  page_title={@page_title}
+>
+  <:buttons>
+    <KamanskyWeb.Components.Page.header_button
+      display={@live_action != :missing_from_collection}
+      phx-click="open"
+      phx-target="#stamp_reference-form-modal"
+      phx-value-action="new"
+      phx-value-stamp-reference-id=""
+    >
+      Add New Stamp Reference
+    </KamanskyWeb.Components.Page.header_button>
+  </:buttons>
+</.live_component>
+<main>
   <KamanskyWeb.Components.DataTable.table
     rows={@data}
     pagination={@pagination}
@@ -46,7 +52,7 @@
       parent_index={@parent_index}
     />
   <% end %>
-</div>
+</main>
 <%= live_modal KamanskyWeb.StampReferenceLive.FormComponent,
   id: "stamp_reference-form-modal",
   form_id: "stamp_reference-form"
