--- a/lib/kamansky_web/live/order_live/show.html.heex
+++ b/lib/kamansky_web/live/order_live/show.html.heex
@@ -6,7 +6,7 @@
   title="false"
 />
 <main class="bg-gray-50">
-  <div class="max-w-2xl mx-auto pt-8 pb-6 sm:px-6 lg:max-w-7xl lg:px-8">
+  <div class="max-w-2xl mx-auto pt-4 pb-6 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="px-4 space-y-2 sm:px-0 sm:flex sm:items-baseline sm:justify-between sm:space-y-0">
       <div class="flex sm:items-baseline sm:space-x-4">
         <h1 class="text-2xl font-extrabold tracking-tight text-gray-900 sm:text-3xl"><%= @page_title %></h1>
@@ -24,10 +24,10 @@
           <%= for listing <- @order.listings do %>
             <div class="py-6 px-4 sm:px-6 lg:grid lg:grid-cols-12 lg:gap-x-8 lg:p-8">
               <div class="sm:flex lg:col-span-7">
-                <div class="flex-shrink-0 w-full aspect-w-1 aspect-h-1 rounded-lg overflow-hidden sm:aspect-none sm:w-24 sm:h-24">
+                <div class="flex-shrink-0 aspect-w-1 aspect-h-1 rounded-lg overflow-hidden sm:aspect-none sm:h-24">
                   <img 
                     src={if listing.stamp.front_photo, do: Attachment.path(listing.stamp.front_photo), else: Routes.static_path(@socket, "/images/blank-stamp.png")} 
-                    class="w-full h-full object-center sm:w-full sm:h-full" 
+                    class="h-full object-center sm:h-full" 
                   />
                 </div>
 
