--- a/lib/kamansky_web/live/order_live/show.html.heex
+++ b/lib/kamansky_web/live/order_live/show.html.heex
@@ -23,14 +23,15 @@
         <div class="bg-white border-t border-b border-gray-200 shadow-sm sm:border sm:rounded-lg">
           <%= for listing <- @order.listings do %>
             <div class="py-6 px-4 sm:px-6 lg:grid lg:grid-cols-12 lg:gap-x-8 lg:p-8">
-              <div class="sm:flex lg:col-span-7">
+              <div class="sm:flex lg:col-span-2 justify-center">
                 <div class="flex-shrink-0 aspect-w-1 aspect-h-1 rounded-lg overflow-hidden sm:aspect-none sm:h-24">
                   <img 
                     src={if listing.stamp.front_photo, do: Attachment.path(listing.stamp.front_photo), else: Routes.static_path(@socket, "/images/blank-stamp.png")} 
                     class="h-full object-center sm:h-full" 
                   />
                 </div>
-
+              </div>
+              <div class="sm:flex lg:col-span-7">
                 <div class="mt-6 sm:mt-0 sm:ml-6">
                   <h3 class="text-base font-medium text-gray-900">
                     <%= StampReference.description(listing.stamp.stamp_reference) %>
