Updated stamp detail page.

--- a/lib/kamansky_web/live/listing_live/active.html.heex
+++ b/lib/kamansky_web/live/listing_live/active.html.heex
@@ -141,7 +141,7 @@
   form_id: "listing-list-on-ebay-form",
   external: true
 %>
-<%= live_modal KamanskyWeb.StampLive.DetailComponent,
-  id: "stamp-detail-modal",
-  footer: false 
-%>
+<.live_component
+  module={KamanskyWeb.StampLive.DetailComponent}
+  id="stamp-detail-modal"
+/>
