--- a/lib/kamansky_web/live/stamp_live/detail_component.html.heex
+++ b/lib/kamansky_web/live/stamp_live/detail_component.html.heex
@@ -1,6 +1,7 @@
 <div id={@id}>
   <%= if @open == true do %>
-    <div 
+    <div
+      id={"kamansky-modal-#{@id}"}
       class="fixed z-10 inset-0 overflow-y-auto" 
       role="dialog" 
       aria-modal="true"
@@ -55,9 +56,9 @@
               </svg>
             </button>
             <div class="w-full grid grid-cols-1 gap-y-8 gap-x-6 items-start sm:grid-cols-12 lg:gap-x-8">
-              <div class="sm:col-span-4 lg:col-span-5">
-                <div class="aspect-w-1 aspect-h-1 rounded-lg bg-gray-100 overflow-hidden">
-                  <img src={current_photo(@socket, @stamp, @current_photo)} class="object-center object-cover">
+              <div class="flex flex-col h-full sm:col-span-4 lg:col-span-5">
+                <div class="aspect-h-1 rounded-lg bg-gray-100 flex-grow overflow-hidden">
+                  <img src={current_photo(@socket, @stamp, @current_photo)} class="object-center">
                 </div>
                 <%= if display_photo_nav(@stamp) do %>
                   <div class="text-center mt-2">
