--- a/lib/kamansky_web/live/order_live/index.html.heex
+++ b/lib/kamansky_web/live/order_live/index.html.heex
@@ -33,7 +33,8 @@
     </KamanskyWeb.Components.Page.header_button>
   </:buttons>
 </.live_component>
-<div class="content">
+<main>
+  <KamanskyWeb.Components.Page.flash flash={live_flash(@flash, :info)} />
   <KamanskyWeb.Components.DataTable.table
     rows={@data}
     pagination={@pagination}
@@ -120,7 +121,7 @@
     </:col>
   </KamanskyWeb.Components.DataTable.table>
   <KamanskyWeb.OrderLive.Components.bottom_tabs socket={@socket} live_action={@live_action} />
-</div>
+</main>
 <%= live_modal KamanskyWeb.OrderLive.NewComponent,
   id: "new-order-form-modal",
   form_id: "new-order-form"
