--- a/lib/kamansky_web/live/expense_live/index.html.heex
+++ b/lib/kamansky_web/live/expense_live/index.html.heex
@@ -17,6 +17,7 @@
   </:buttons>
 </.live_component>
 <main>
+  <KamanskyWeb.Components.Page.flash flash={live_flash(@flash, :info)} />
   <KamanskyWeb.Components.DataTable.table
     rows={@data}
     pagination={@pagination}
