--- a/lib/kamansky_web/live/settings_live/index.html.heex
+++ b/lib/kamansky_web/live/settings_live/index.html.heex
@@ -6,6 +6,7 @@
   page_title={@page_title}
 />
 <main class="h-full">
+  <KamanskyWeb.Components.Page.flash flash={live_flash(@flash, :info)} />
   <div class="mt-4 lg:grid lg:grid-cols-12 lg:gap-x-5">
     <aside class="py-6 px-2 sm:px-6 lg:py-0 lg:px-0 lg:col-span-3">
       <nav class="space-y-1">
